# xingu

./: .gitignore  Cargo.toml  LICENSE  README.md  TODOS.md
.github/workflows/: ci.yml  release.yml
skills/: check-status.yaml  check-targeting.yaml  publish-app.yaml  update-listing.yaml  upload-apk.yaml  validate-edit.yaml
skills/check-status/: SKILL.md
skills/check-targeting/: SKILL.md
skills/commit-edit/: SKILL.md
skills/create-edit/: SKILL.md
skills/delete-edit/: SKILL.md
skills/full-release/: SKILL.md
skills/get-report/: SKILL.md
skills/manage-screenshots/: SKILL.md
skills/publish-app/: SKILL.md
skills/rollback-edit/: SKILL.md
skills/troubleshoot-validation/: SKILL.md
skills/update-listing/: SKILL.md
skills/upload-apk/: SKILL.md
skills/validate-edit/: SKILL.md
src/: main.rs
src/api/: client.rs  models.rs
src/auth/: mod.rs  oauth.rs  store.rs
src/cli/: apks.rs  apps.rs  availability.rs  completions.rs  details.rs  edits.rs  exec.rs  helpers.rs  images.rs  info.rs  init.rs  listings.rs  mod.rs  reports.rs  skills.rs  targeting.rs  update.rs  videos.rs
src/output/: json.rs  mod.rs  table.rs
