[package]
name = "xingu"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive"] }
comfy-table = "=7.1.3"
dirs = "6.0.0"
keyring = "3.6.3"
reqwest = { version = "0.13.2", features = ["json", "multipart", "rustls", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.44", features = ["full"] }

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3.27.0"
